y.output
   0  $accept : block $end

   1  block : declarations compound_statement '$'

   2  declarations : DECLARE declare_rest
   3               |

   4  declare_rest : id data_type default ';' declare_rest
   5               |

   6  default : ":=" righthandside
   7          |

   8  data_type : characters
   9            | numbers
  10            | BOOLEAN

  11  characters : CHAR

  12  size : num size_option
  13       |

  14  size_option : ',' num
  15              |

  16  numbers : NUMBER '(' size ')'
  17          | INT '(' size ')'
  18          | SMALLINT '(' size ')'
  19          | POSITIVE '(' size ')'

  20  compound_statement : BEGIN optional_statements END ';'

  21  optional_statements : NULL ';'
  22                      | statement_list

  23  statement_list : statement
  24                 | statement_list ';' statement

  25  statement : lefthandside
  26            | compound_statement
  27            | DBMS_OUTPUT.PUT_LINE '(' id ')'
  28            | DBMS_OUTPUT.PUT '(' id ')'
  29            | DBMS_OUTPUT.NEW_LINE
  30            | '&' id
  31            | IF expression THEN statement END IF
  32            | WHILE expression LOOP statement END LOOP

  33  lefthandside : id ":=" righthandside

  34  righthandside : expression
  35                | 'c'

  36  expression : simple_expression
  37             | simple_expression relop simple_expression

  38  simple_expression : term
  39                    | simple_expression addop term

  40  term : factor
  41       | term mulop factor

  42  factor : id
  43         | num
  44         | TRUE
  45         | FALSE
  46         | NULL
  47         | NOT factor

  48  relop : '>'
  49        | ">="
  50        | '='
  51        | "<="
  52        | '<'
  53        | "<>"

  54  addop : '+'
  55        | '-'

  56  mulop : '*'
  57        | '/'
  58        | MOD

state 0
	$accept : . block $end  (0)
	declarations : .  (3)

	DECLARE  shift 1
	BEGIN  reduce 3

	block  goto 2
	declarations  goto 3


state 1
	declarations : DECLARE . declare_rest  (2)
	declare_rest : .  (5)

	id  shift 4
	BEGIN  reduce 5

	declare_rest  goto 5


state 2
	$accept : block . $end  (0)

	$end  accept


state 3
	block : declarations . compound_statement '$'  (1)

	BEGIN  shift 6
	.  error

	compound_statement  goto 7


state 4
	declare_rest : id . data_type default ';' declare_rest  (4)

	BOOLEAN  shift 8
	CHAR  shift 9
	NUMBER  shift 10
	INT  shift 11
	SMALLINT  shift 12
	POSITIVE  shift 13
	.  error

	data_type  goto 14
	characters  goto 15
	numbers  goto 16


state 5
	declarations : DECLARE declare_rest .  (2)

	.  reduce 2


state 6
	compound_statement : BEGIN . optional_statements END ';'  (20)

	id  shift 17
	BEGIN  shift 6
	NULL  shift 18
	DBMS_OUTPUT.PUT_LINE  shift 19
	DBMS_OUTPUT.PUT  shift 20
	DBMS_OUTPUT.NEW_LINE  shift 21
	IF  shift 22
	WHILE  shift 23
	'&'  shift 24
	.  error

	compound_statement  goto 25
	optional_statements  goto 26
	statement_list  goto 27
	statement  goto 28
	lefthandside  goto 29


state 7
	block : declarations compound_statement . '$'  (1)

	'$'  shift 30
	.  error


state 8
	data_type : BOOLEAN .  (10)

	.  reduce 10


state 9
	characters : CHAR .  (11)

	.  reduce 11


state 10
	numbers : NUMBER . '(' size ')'  (16)

	'('  shift 31
	.  error


state 11
	numbers : INT . '(' size ')'  (17)

	'('  shift 32
	.  error


state 12
	numbers : SMALLINT . '(' size ')'  (18)

	'('  shift 33
	.  error


state 13
	numbers : POSITIVE . '(' size ')'  (19)

	'('  shift 34
	.  error


state 14
	declare_rest : id data_type . default ';' declare_rest  (4)
	default : .  (7)

	":="  shift 35
	';'  reduce 7

	default  goto 36


state 15
	data_type : characters .  (8)

	.  reduce 8


state 16
	data_type : numbers .  (9)

	.  reduce 9


state 17
	lefthandside : id . ":=" righthandside  (33)

	":="  shift 37
	.  error


state 18
	optional_statements : NULL . ';'  (21)

	';'  shift 38
	.  error


state 19
	statement : DBMS_OUTPUT.PUT_LINE . '(' id ')'  (27)

	'('  shift 39
	.  error


state 20
	statement : DBMS_OUTPUT.PUT . '(' id ')'  (28)

	'('  shift 40
	.  error


state 21
	statement : DBMS_OUTPUT.NEW_LINE .  (29)

	.  reduce 29


state 22
	statement : IF . expression THEN statement END IF  (31)

	id  shift 41
	num  shift 42
	NULL  shift 43
	TRUE  shift 44
	FALSE  shift 45
	NOT  shift 46
	.  error

	expression  goto 47
	simple_expression  goto 48
	term  goto 49
	factor  goto 50


state 23
	statement : WHILE . expression LOOP statement END LOOP  (32)

	id  shift 41
	num  shift 42
	NULL  shift 43
	TRUE  shift 44
	FALSE  shift 45
	NOT  shift 46
	.  error

	expression  goto 51
	simple_expression  goto 48
	term  goto 49
	factor  goto 50


state 24
	statement : '&' . id  (30)

	id  shift 52
	.  error


state 25
	statement : compound_statement .  (26)

	.  reduce 26


state 26
	compound_statement : BEGIN optional_statements . END ';'  (20)

	END  shift 53
	.  error


state 27
	optional_statements : statement_list .  (22)
	statement_list : statement_list . ';' statement  (24)

	';'  shift 54
	END  reduce 22


state 28
	statement_list : statement .  (23)

	.  reduce 23


state 29
	statement : lefthandside .  (25)

	.  reduce 25


state 30
	block : declarations compound_statement '$' .  (1)

	.  reduce 1


state 31
	numbers : NUMBER '(' . size ')'  (16)
	size : .  (13)

	num  shift 55
	')'  reduce 13

	size  goto 56


state 32
	numbers : INT '(' . size ')'  (17)
	size : .  (13)

	num  shift 55
	')'  reduce 13

	size  goto 57


state 33
	numbers : SMALLINT '(' . size ')'  (18)
	size : .  (13)

	num  shift 55
	')'  reduce 13

	size  goto 58


state 34
	numbers : POSITIVE '(' . size ')'  (19)
	size : .  (13)

	num  shift 55
	')'  reduce 13

	size  goto 59


state 35
	default : ":=" . righthandside  (6)

	id  shift 41
	num  shift 42
	NULL  shift 43
	TRUE  shift 44
	FALSE  shift 45
	NOT  shift 46
	'c'  shift 60
	.  error

	righthandside  goto 61
	expression  goto 62
	simple_expression  goto 48
	term  goto 49
	factor  goto 50


state 36
	declare_rest : id data_type default . ';' declare_rest  (4)

	';'  shift 63
	.  error


state 37
	lefthandside : id ":=" . righthandside  (33)

	id  shift 41
	num  shift 42
	NULL  shift 43
	TRUE  shift 44
	FALSE  shift 45
	NOT  shift 46
	'c'  shift 60
	.  error

	righthandside  goto 64
	expression  goto 62
	simple_expression  goto 48
	term  goto 49
	factor  goto 50


state 38
	optional_statements : NULL ';' .  (21)

	.  reduce 21


state 39
	statement : DBMS_OUTPUT.PUT_LINE '(' . id ')'  (27)

	id  shift 65
	.  error


state 40
	statement : DBMS_OUTPUT.PUT '(' . id ')'  (28)

	id  shift 66
	.  error


state 41
	factor : id .  (42)

	.  reduce 42


state 42
	factor : num .  (43)

	.  reduce 43


state 43
	factor : NULL .  (46)

	.  reduce 46


state 44
	factor : TRUE .  (44)

	.  reduce 44


state 45
	factor : FALSE .  (45)

	.  reduce 45


state 46
	factor : NOT . factor  (47)

	id  shift 41
	num  shift 42
	NULL  shift 43
	TRUE  shift 44
	FALSE  shift 45
	NOT  shift 46
	.  error

	factor  goto 67


state 47
	statement : IF expression . THEN statement END IF  (31)

	THEN  shift 68
	.  error


state 48
	expression : simple_expression .  (36)
	expression : simple_expression . relop simple_expression  (37)
	simple_expression : simple_expression . addop term  (39)

	'>'  shift 69
	">="  shift 70
	'='  shift 71
	"<="  shift 72
	'<'  shift 73
	"<>"  shift 74
	'+'  shift 75
	'-'  shift 76
	END  reduce 36
	THEN  reduce 36
	LOOP  reduce 36
	';'  reduce 36

	relop  goto 77
	addop  goto 78


state 49
	simple_expression : term .  (38)
	term : term . mulop factor  (41)

	MOD  shift 79
	'*'  shift 80
	'/'  shift 81
	END  reduce 38
	THEN  reduce 38
	LOOP  reduce 38
	';'  reduce 38
	'>'  reduce 38
	">="  reduce 38
	'='  reduce 38
	"<="  reduce 38
	'<'  reduce 38
	"<>"  reduce 38
	'+'  reduce 38
	'-'  reduce 38

	mulop  goto 82


state 50
	term : factor .  (40)

	.  reduce 40


state 51
	statement : WHILE expression . LOOP statement END LOOP  (32)

	LOOP  shift 83
	.  error


state 52
	statement : '&' id .  (30)

	.  reduce 30


state 53
	compound_statement : BEGIN optional_statements END . ';'  (20)

	';'  shift 84
	.  error


state 54
	statement_list : statement_list ';' . statement  (24)

	id  shift 17
	BEGIN  shift 6
	DBMS_OUTPUT.PUT_LINE  shift 19
	DBMS_OUTPUT.PUT  shift 20
	DBMS_OUTPUT.NEW_LINE  shift 21
	IF  shift 22
	WHILE  shift 23
	'&'  shift 24
	.  error

	compound_statement  goto 25
	statement  goto 85
	lefthandside  goto 29


state 55
	size : num . size_option  (12)
	size_option : .  (15)

	','  shift 86
	')'  reduce 15

	size_option  goto 87


state 56
	numbers : NUMBER '(' size . ')'  (16)

	')'  shift 88
	.  error


state 57
	numbers : INT '(' size . ')'  (17)

	')'  shift 89
	.  error


state 58
	numbers : SMALLINT '(' size . ')'  (18)

	')'  shift 90
	.  error


state 59
	numbers : POSITIVE '(' size . ')'  (19)

	')'  shift 91
	.  error


state 60
	righthandside : 'c' .  (35)

	.  reduce 35


state 61
	default : ":=" righthandside .  (6)

	.  reduce 6


state 62
	righthandside : expression .  (34)

	.  reduce 34


state 63
	declare_rest : id data_type default ';' . declare_rest  (4)
	declare_rest : .  (5)

	id  shift 4
	BEGIN  reduce 5

	declare_rest  goto 92


state 64
	lefthandside : id ":=" righthandside .  (33)

	.  reduce 33


state 65
	statement : DBMS_OUTPUT.PUT_LINE '(' id . ')'  (27)

	')'  shift 93
	.  error


state 66
	statement : DBMS_OUTPUT.PUT '(' id . ')'  (28)

	')'  shift 94
	.  error


state 67
	factor : NOT factor .  (47)

	.  reduce 47


state 68
	statement : IF expression THEN . statement END IF  (31)

	id  shift 17
	BEGIN  shift 6
	DBMS_OUTPUT.PUT_LINE  shift 19
	DBMS_OUTPUT.PUT  shift 20
	DBMS_OUTPUT.NEW_LINE  shift 21
	IF  shift 22
	WHILE  shift 23
	'&'  shift 24
	.  error

	compound_statement  goto 25
	statement  goto 95
	lefthandside  goto 29


state 69
	relop : '>' .  (48)

	.  reduce 48


state 70
	relop : ">=" .  (49)

	.  reduce 49


state 71
	relop : '=' .  (50)

	.  reduce 50


state 72
	relop : "<=" .  (51)

	.  reduce 51


state 73
	relop : '<' .  (52)

	.  reduce 52


state 74
	relop : "<>" .  (53)

	.  reduce 53


state 75
	addop : '+' .  (54)

	.  reduce 54


state 76
	addop : '-' .  (55)

	.  reduce 55


state 77
	expression : simple_expression relop . simple_expression  (37)

	id  shift 41
	num  shift 42
	NULL  shift 43
	TRUE  shift 44
	FALSE  shift 45
	NOT  shift 46
	.  error

	simple_expression  goto 96
	term  goto 49
	factor  goto 50


state 78
	simple_expression : simple_expression addop . term  (39)

	id  shift 41
	num  shift 42
	NULL  shift 43
	TRUE  shift 44
	FALSE  shift 45
	NOT  shift 46
	.  error

	term  goto 97
	factor  goto 50


state 79
	mulop : MOD .  (58)

	.  reduce 58


state 80
	mulop : '*' .  (56)

	.  reduce 56


state 81
	mulop : '/' .  (57)

	.  reduce 57


state 82
	term : term mulop . factor  (41)

	id  shift 41
	num  shift 42
	NULL  shift 43
	TRUE  shift 44
	FALSE  shift 45
	NOT  shift 46
	.  error

	factor  goto 98


state 83
	statement : WHILE expression LOOP . statement END LOOP  (32)

	id  shift 17
	BEGIN  shift 6
	DBMS_OUTPUT.PUT_LINE  shift 19
	DBMS_OUTPUT.PUT  shift 20
	DBMS_OUTPUT.NEW_LINE  shift 21
	IF  shift 22
	WHILE  shift 23
	'&'  shift 24
	.  error

	compound_statement  goto 25
	statement  goto 99
	lefthandside  goto 29


state 84
	compound_statement : BEGIN optional_statements END ';' .  (20)

	.  reduce 20


state 85
	statement_list : statement_list ';' statement .  (24)

	.  reduce 24


state 86
	size_option : ',' . num  (14)

	num  shift 100
	.  error


state 87
	size : num size_option .  (12)

	.  reduce 12


state 88
	numbers : NUMBER '(' size ')' .  (16)

	.  reduce 16


state 89
	numbers : INT '(' size ')' .  (17)

	.  reduce 17


state 90
	numbers : SMALLINT '(' size ')' .  (18)

	.  reduce 18


state 91
	numbers : POSITIVE '(' size ')' .  (19)

	.  reduce 19


state 92
	declare_rest : id data_type default ';' declare_rest .  (4)

	.  reduce 4


state 93
	statement : DBMS_OUTPUT.PUT_LINE '(' id ')' .  (27)

	.  reduce 27


state 94
	statement : DBMS_OUTPUT.PUT '(' id ')' .  (28)

	.  reduce 28


state 95
	statement : IF expression THEN statement . END IF  (31)

	END  shift 101
	.  error


state 96
	expression : simple_expression relop simple_expression .  (37)
	simple_expression : simple_expression . addop term  (39)

	'+'  shift 75
	'-'  shift 76
	END  reduce 37
	THEN  reduce 37
	LOOP  reduce 37
	';'  reduce 37

	addop  goto 78


state 97
	simple_expression : simple_expression addop term .  (39)
	term : term . mulop factor  (41)

	MOD  shift 79
	'*'  shift 80
	'/'  shift 81
	END  reduce 39
	THEN  reduce 39
	LOOP  reduce 39
	';'  reduce 39
	'>'  reduce 39
	">="  reduce 39
	'='  reduce 39
	"<="  reduce 39
	'<'  reduce 39
	"<>"  reduce 39
	'+'  reduce 39
	'-'  reduce 39

	mulop  goto 82


state 98
	term : term mulop factor .  (41)

	.  reduce 41


state 99
	statement : WHILE expression LOOP statement . END LOOP  (32)

	END  shift 102
	.  error


state 100
	size_option : ',' num .  (14)

	.  reduce 14


state 101
	statement : IF expression THEN statement END . IF  (31)

	IF  shift 103
	.  error


state 102
	statement : WHILE expression LOOP statement END . LOOP  (32)

	LOOP  shift 104
	.  error


state 103
	statement : IF expression THEN statement END IF .  (31)

	.  reduce 31


state 104
	statement : WHILE expression LOOP statement END LOOP .  (32)

	.  reduce 32


43 terminals, 23 nonterminals
59 grammar rules, 105 states
